--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,21 @@
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.5.4</version>
+            
+            
+        </dependency>
+        <dependency>
+            <groupId>lib</groupId>
+            <artifactId>jSerialComm</artifactId>
+            <version>2-10-3</version>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>lib</id>
+            <url>file://${project.basedir}/src/main/lib</url>
+        </repository>
+    </repositories>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>9</maven.compiler.source>
