--- a/GUI/pom.xml
+++ b/GUI/pom.xml
@@ -16,12 +16,17 @@
             <artifactId>jSerialComm</artifactId>
             <version>[2.0.0,3.0.0)</version>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.3.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>9</maven.compiler.source>
         <maven.compiler.target>9</maven.compiler.target>
-        <exec.mainClass>com.univalle.guiInterfacesLab2023.GuiInterfacesLab2023</exec.mainClass>
+        <exec.mainClass>com.univalle.guiInterfacesLab2023.MainApp</exec.mainClass>
     </properties>
     <name>GuiInterfacesLab2023</name>
 </project>
