--- a/GUI/pom.xml
+++ b/GUI/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>labAPI</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
