[Feat] Implementación inicial de [LabAPI] en la GUI.

--- a/GUI/pom.xml
+++ b/GUI/pom.xml
@@ -22,9 +22,10 @@
             <version>3.3.1</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.univalle</groupId>
             <artifactId>labAPI</artifactId>
-            <version>${project.version}</version>
+            <version>0.0.1</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <properties>
