--- a/GUI/pom.xml
+++ b/GUI/pom.xml
@@ -22,10 +22,9 @@
             <version>3.3.1</version>
         </dependency>
         <dependency>
-            <groupId>com.univalle</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>labAPI</artifactId>
-            <version>0.0.1</version>
-            <type>jar</type>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
     <properties>
